--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -112,6 +112,9 @@
     <string name="get_send_code">获取验证码</string>
     <string name="enter_phone">请输入手机号码</string>
     <string name="pwds_reset_success">密码设置成功</string>
+    <string name="tv_context">内容</string>
+    <string name="tv_version_owner">当前版本：司机版</string>
+    <string name="tv_version_shipper">当前版本：货主版</string>
 
 
 </resources>
