货主认证接口整理完毕

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -125,6 +125,7 @@
     <string name="company_name_not_empty">公司名称不能为空</string>
     <string name="company_address_not_empty">公司地址不能为空</string>
     <string name="position_not_empty">职位不能为空</string>
+    <string name="up_load_success">资料上传成功</string>
 
 
 </resources>
