--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -135,6 +135,7 @@
     <string name="destination">目的地</string>
     <string name="Loading_car_time">装车时间</string>
     <string name="more">更多</string>
+    <string name="goods_detail">货源详情</string>
 
 
 </resources>
