--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -136,6 +136,22 @@
     <string name="Loading_car_time">装车时间</string>
     <string name="more">更多</string>
     <string name="goods_detail">货源详情</string>
+    <string name="option_shipper">发布车源</string>
+    <string name="please_sel_start_area">请选择出发地</string>
+    <string name="please_sel_end_area">请选择目的地</string>
+    <string name="car_style">车辆类型</string>
+    <string name="please_sel_car_style">请选择车辆类型</string>
+    <string name="get_wgt">承运重量</string>
+    <string name="please_sel_get_wgt">请选择承受重量</string>
+    <string name="tons">吨</string>
+    <string name="carrier_volume">承运体积</string>
+    <string name="please_enter_carrier_volume">请输入承受体积</string>
+    <string name="volume">方</string>
+    <string name="please_sel_time">请选择时间</string>
+    <string name="start_car_time">发车时间</string>
+    <string name="note">备注</string>
+    <string name="please_enter_note">请输入备注</string>
+    <string name="release">发布</string>
 
 
 </resources>
