--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -179,6 +179,10 @@
     <string name="please_enter_message_note">请输入备注信息</string>
     <string name="contact">只允许实名车主联系我</string>
     <string name="add_route">增加订阅路线</string>
+    <string name="order_details">订单详情</string>
+    <string name="all">全部</string>
+    <string name="finish">已完成</string>
+    <string name="unfinish">未完成</string>
 
 
 </resources>
