--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -183,6 +183,9 @@
     <string name="all">全部</string>
     <string name="finish">已完成</string>
     <string name="unfinish">未完成</string>
+    <string name="my_orders">我的运单</string>
+    <string name="no_result">对不起，没有搜索到相关数据！</string>
+
 
 
 </resources>
